<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="us.four.lunchroulette.FilterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="Current Filter:"
        android:textSize="22sp"
        android:translationX="-110dp"
        android:translationY="10dp" />

    <Spinner
        android:id="@+id/currentFilterSpinner"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:contentDescription="@string/food_type_example"
        android:translationX="70dp"
        android:translationY="-27dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:translationY="-40dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_name"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/hint"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_type"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerFoodType"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/food_type_example" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_type"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerRestaurantType"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/restaurant_type_example" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_range"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerPriceRange"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/price_range_example" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerRating"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/rating_example" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerDistance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/distance_example" />

    </LinearLayout>

    <Button
        android:id="@+id/createList"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/create_list" />

</LinearLayout>
